00-nic-with-backend/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: cdg-auth-lab
---
apiVersion: v1
kind: Namespace
metadata:
  name: nginx-ingress
